[build-system]
requires = ["setuptools >= 61.0", "pytest"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [""]

[project]
name = "github_issues"
version = "0.1"
authors = [
  { name="Nancy F. Hansen", email="nhansen@mail.nih.gov" },
]
description = "A package for submitting and retrieving issues from a github repository"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'gspread >= 6.1.2', 'pytest >= 7.4.3',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.scripts]

[project.urls]
"Homepage" = "https://github.com/nhansen/github_issues"
"Bug Tracker" = "https://github.com/nhansen/github_issues"

